@@ -18,18 +18,24 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
+import static org.assertj.core.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-@DisplayName("Testes do BiometriaService")
+@DisplayName("BiometriaService - Testes Unitários")
 class BiometriaServiceTest {
 
     @Mock
@@ -47,180 +53,409 @@ class BiometriaServiceTest {
     @InjectMocks
     private BiometriaService biometriaService;
 
-    private Lote loteAtivo;
-    private BiometriaRequest request;
+    private Lote lote;
     private Biometria biometria;
+    private BiometriaRequest request;
     private BiometriaResponse response;
 
     @BeforeEach
     void setUp() {
-        loteAtivo = Lote.builder()
-                .id(10L)
-                .codigo("LOTE01_2025")
-                .dataPovoamento(LocalDate.of(2025, 1, 1))
+        lote = Lote.builder()
+                .id(1L)
+                .codigo("LOTE-001")
                 .status(StatusLoteEnum.ATIVO)
-                .quantidadePosLarvas(100_000)
-                .build();
-
-        request = BiometriaRequest.builder()
-                .loteId(10L)
-                .dataBiometria(LocalDate.of(2025, 1, 15))
-                .pesoMedio(new BigDecimal("10.500"))
-                .quantidadeAmostrada(50)
-                .pesoTotalAmostra(new BigDecimal("525.000"))
-                .observacoes("Biometria inicial")
+                .dataPovoamento(LocalDate.now().minusDays(30))
+                .quantidadePosLarvas(100000)
                 .build();
 
         biometria = Biometria.builder()
                 .id(1L)
-                .lote(loteAtivo)
-                .dataBiometria(request.getDataBiometria())
-                .diaCultivo(14)
-                .pesoMedio(request.getPesoMedio())
-                .quantidadeAmostrada(request.getQuantidadeAmostrada())
-                .pesoTotalAmostra(request.getPesoTotalAmostra())
-                .ganhoPesoDiario(new BigDecimal("0.750"))
-                .biomassaEstimada(new BigDecimal("800.00"))
-                .sobrevivenciaEstimada(new BigDecimal("80.0"))
-                .fatorConversaoAlimentar(new BigDecimal("1.30"))
-                .observacoes(request.getObservacoes())
+                .lote(lote)
+                .dataBiometria(LocalDate.now())
+                .diaCultivo(30)
+                .pesoMedio(new BigDecimal("12.500"))
+                .quantidadeAmostrada(100)
+                .pesoTotalAmostra(new BigDecimal("1250.000"))
+                .ganhoPesoDiario(new BigDecimal("0.4167"))
+                .biomassaEstimada(new BigDecimal("1000.00"))
+                .sobrevivenciaEstimada(new BigDecimal("80.00"))
+                .fatorConversaoAlimentar(new BigDecimal("1.500"))
+                .observacoes("Biometria padrão")
+                .dataCriacao(LocalDateTime.now())
+                .dataAtualizacao(LocalDateTime.now())
+                .build();
+
+        request = BiometriaRequest.builder()
+                .loteId(1L)
+                .dataBiometria(LocalDate.now())
+                .pesoMedio(new BigDecimal("12.500"))
+                .quantidadeAmostrada(100)
+                .pesoTotalAmostra(new BigDecimal("1250.000"))
+                .observacoes("Biometria padrão")
                 .build();
 
         response = BiometriaResponse.builder()
-                .id(biometria.getId())
-                .loteId(loteAtivo.getId())
-                .loteCodigo(loteAtivo.getCodigo())
-                .dataBiometria(biometria.getDataBiometria())
-                .diaCultivo(biometria.getDiaCultivo())
-                .pesoMedio(biometria.getPesoMedio())
-                .quantidadeAmostrada(biometria.getQuantidadeAmostrada())
-                .pesoTotalAmostra(biometria.getPesoTotalAmostra())
-                .ganhoPesoDiario(biometria.getGanhoPesoDiario())
-                .biomassaEstimada(biometria.getBiomassaEstimada())
-                .sobrevivenciaEstimada(biometria.getSobrevivenciaEstimada())
-                .fatorConversaoAlimentar(biometria.getFatorConversaoAlimentar())
-                .observacoes(biometria.getObservacoes())
+                .id(1L)
+                .loteId(1L)
+                .loteCodigo("LOTE-001")
+                .dataBiometria(LocalDate.now())
+                .diaCultivo(30)
+                .pesoMedio(new BigDecimal("12.500"))
+                .quantidadeAmostrada(100)
+                .pesoTotalAmostra(new BigDecimal("1250.000"))
+                .ganhoPesoDiario(new BigDecimal("0.4167"))
+                .biomassaEstimada(new BigDecimal("1000.00"))
+                .sobrevivenciaEstimada(new BigDecimal("80.00"))
+                .fatorConversaoAlimentar(new BigDecimal("1.500"))
+                .observacoes("Biometria padrão")
                 .build();
     }
 
+    // ==================== TESTES DE CRIAÇÃO ====================
+
     @Test
-    @DisplayName("criarBiometria() deve criar biometria com sucesso para lote ATIVO")
-    void criarBiometriaDeveCriarComSucesso() {
-        when(loteRepository.findById(10L)).thenReturn(Optional.of(loteAtivo));
-        when(biometriaMapper.toEntity(request, loteAtivo)).thenReturn(biometria);
+    @DisplayName("Deve criar biometria com sucesso")
+    void deveCriarBiometriaComSucesso() {
+        // Arrange
+        when(loteRepository.findById(1L)).thenReturn(Optional.of(lote));
+        when(biometriaMapper.toEntity(request, lote)).thenReturn(biometria);
+        when(racaoRepository.calcularQuantidadeTotalRacaoByLoteId(1L))
+                .thenReturn(new BigDecimal("1500.000"));
+        when(biometriaRepository.save(any(Biometria.class))).thenReturn(biometria);
+        when(biometriaMapper.toResponse(biometria)).thenReturn(response);
 
-        // simula cálculo de FCA usando ração (pode ser null ou um valor qualquer)
-        when(racaoRepository.calcularQuantidadeTotalRacaoByLoteId(10L))
-                .thenReturn(new BigDecimal("1040.000"));
-
-        // salvar devolve o próprio objeto alterado
-        when(biometriaRepository.save(any(Biometria.class)))
-                .thenAnswer(invocation -> invocation.getArgument(0));
-        when(biometriaMapper.toResponse(any(Biometria.class)))
-                .thenReturn(response);
-
+        // Act
         BiometriaResponse resultado = biometriaService.criar(request);
 
-        assertNotNull(resultado);
-        assertEquals(1L, resultado.getId());
-        assertEquals(10L, resultado.getLoteId());
-
-        verify(loteRepository).findById(10L);
-        verify(biometriaMapper).toEntity(request, loteAtivo);
+        // Assert
+        assertThat(resultado).isNotNull();
+        assertThat(resultado.getPesoMedio()).isEqualByComparingTo("12.500");
+        assertThat(resultado.getDiaCultivo()).isEqualTo(30);
         verify(biometriaRepository).save(any(Biometria.class));
-        verify(biometriaMapper).toResponse(any(Biometria.class));
+        verify(loteRepository).findById(1L);
     }
 
     @Test
-    @DisplayName("criarBiometria() deve lançar EntityNotFoundException quando lote não existe")
-    void criarBiometriaDeveLancarEntityNotFoundQuandoLoteNaoExiste() {
-        when(loteRepository.findById(10L)).thenReturn(Optional.empty());
+    @DisplayName("Deve lançar exceção ao criar biometria com lote inexistente")
+    void deveLancarExcecaoAoCriarBiometriaComLoteInexistente() {
+        // Arrange
+        when(loteRepository.findById(999L)).thenReturn(Optional.empty());
+        request.setLoteId(999L);
 
-        assertThrows(EntityNotFoundException.class,
-                () -> biometriaService.criar(request));
+        // Act & Assert
+        assertThatThrownBy(() -> biometriaService.criar(request))
+                .isInstanceOf(EntityNotFoundException.class)
+                .hasMessageContaining("Lote");
 
-        verify(biometriaRepository, never()).save(any());
+        verify(biometriaRepository, never()).save(any(Biometria.class));
     }
 
     @Test
-    @DisplayName("criarBiometria() deve lançar BusinessException quando data é antes do povoamento")
-    void criarBiometriaDeveLancarBusinessQuandoDataAntesPovoamento() {
-        BiometriaRequest requestDataInvalida = BiometriaRequest.builder()
-                .loteId(10L)
-                .dataBiometria(LocalDate.of(2024, 12, 31)) // antes do povoamento
-                .pesoMedio(new BigDecimal("10.500"))
-                .quantidadeAmostrada(50)
-                .pesoTotalAmostra(new BigDecimal("525.000"))
-                .observacoes("Biometria inválida")
-                .build();
+    @DisplayName("Deve lançar exceção ao criar biometria em lote finalizado")
+    void deveLancarExcecaoAoCriarBiometriaEmLoteFinalizado() {
+        // Arrange
+        lote.setStatus(StatusLoteEnum.FINALIZADO);
+        when(loteRepository.findById(1L)).thenReturn(Optional.of(lote));
 
-        when(loteRepository.findById(10L)).thenReturn(Optional.of(loteAtivo));
+        // Act & Assert
+        assertThatThrownBy(() -> biometriaService.criar(request))
+                .isInstanceOf(BusinessException.class)
+                .hasMessageContaining("lotes ativos ou planejados");
 
-        assertThrows(BusinessException.class,
-                () -> biometriaService.criar(requestDataInvalida));
-
-        verify(biometriaRepository, never()).save(any());
+        verify(biometriaRepository, never()).save(any(Biometria.class));
     }
 
     @Test
-    @DisplayName("criarBiometria() deve permitir lote PLANEJADO também")
-    void criarBiometriaDevePermitirLotePlanejado() {
-        loteAtivo.setStatus(StatusLoteEnum.PLANEJADO);
-        when(loteRepository.findById(10L)).thenReturn(Optional.of(loteAtivo));
-        when(biometriaMapper.toEntity(request, loteAtivo)).thenReturn(biometria);
-        when(biometriaRepository.save(any(Biometria.class)))
-                .thenAnswer(invocation -> invocation.getArgument(0));
-        when(biometriaMapper.toResponse(any(Biometria.class))).thenReturn(response);
+    @DisplayName("Deve lançar exceção ao criar biometria com data anterior ao povoamento")
+    void deveLancarExcecaoAoCriarBiometriaComDataAnteriorAoPovoamento() {
+        // Arrange
+        request.setDataBiometria(lote.getDataPovoamento().minusDays(1));
+        when(loteRepository.findById(1L)).thenReturn(Optional.of(lote));
 
+        // Act & Assert
+        assertThatThrownBy(() -> biometriaService.criar(request))
+                .isInstanceOf(BusinessException.class)
+                .hasMessageContaining("não pode ser anterior à data de povoamento");
+
+        verify(biometriaRepository, never()).save(any(Biometria.class));
+    }
+
+    @Test
+    @DisplayName("Deve criar biometria mesmo com divergência pequena no peso total")
+    void deveCriarBiometriaComDivergenciaPequenaNopesoTotal() {
+        // Arrange - 3% de diferença (dentro da margem de 5%)
+        request.setPesoTotalAmostra(new BigDecimal("1212.500")); // 3% menos
+        when(loteRepository.findById(1L)).thenReturn(Optional.of(lote));
+        when(biometriaMapper.toEntity(request, lote)).thenReturn(biometria);
+        when(racaoRepository.calcularQuantidadeTotalRacaoByLoteId(1L))
+                .thenReturn(new BigDecimal("1500.000"));
+        when(biometriaRepository.save(any(Biometria.class))).thenReturn(biometria);
+        when(biometriaMapper.toResponse(biometria)).thenReturn(response);
+
+        // Act
         BiometriaResponse resultado = biometriaService.criar(request);
 
-        assertNotNull(resultado);
-        assertEquals(1L, resultado.getId());
-
+        // Assert
+        assertThat(resultado).isNotNull();
         verify(biometriaRepository).save(any(Biometria.class));
     }
 
     @Test
-    @DisplayName("buscarPorId() deve retornar biometria quando encontrar")
-    void buscarPorIdDeveRetornarQuandoEncontrar() {
+    @DisplayName("Deve criar biometria em lote planejado")
+    void deveCriarBiometriaEmLotePlanejado() {
+        // Arrange
+        lote.setStatus(StatusLoteEnum.PLANEJADO);
+        when(loteRepository.findById(1L)).thenReturn(Optional.of(lote));
+        when(biometriaMapper.toEntity(request, lote)).thenReturn(biometria);
+        when(racaoRepository.calcularQuantidadeTotalRacaoByLoteId(1L))
+                .thenReturn(new BigDecimal("1500.000"));
+        when(biometriaRepository.save(any(Biometria.class))).thenReturn(biometria);
+        when(biometriaMapper.toResponse(biometria)).thenReturn(response);
+
+        // Act
+        BiometriaResponse resultado = biometriaService.criar(request);
+
+        // Assert
+        assertThat(resultado).isNotNull();
+        verify(biometriaRepository).save(any(Biometria.class));
+    }
+
+    // ==================== TESTES DE BUSCA ====================
+
+    @Test
+    @DisplayName("Deve buscar biometria por ID com sucesso")
+    void deveBuscarBiometriaPorIdComSucesso() {
+        // Arrange
         when(biometriaRepository.findById(1L)).thenReturn(Optional.of(biometria));
         when(biometriaMapper.toResponse(biometria)).thenReturn(response);
 
+        // Act
         BiometriaResponse resultado = biometriaService.buscarPorId(1L);
 
-        assertNotNull(resultado);
-        assertEquals(1L, resultado.getId());
+        // Assert
+        assertThat(resultado).isNotNull();
+        assertThat(resultado.getId()).isEqualTo(1L);
+        verify(biometriaRepository).findById(1L);
     }
 
     @Test
-    @DisplayName("buscarPorId() deve lançar EntityNotFoundException quando não encontrar")
-    void buscarPorIdDeveLancarEntityNotFoundQuandoNaoEncontrar() {
-        when(biometriaRepository.findById(1L)).thenReturn(Optional.empty());
+    @DisplayName("Deve lançar exceção ao buscar biometria inexistente")
+    void deveLancarExcecaoAoBuscarBiometriaInexistente() {
+        // Arrange
+        when(biometriaRepository.findById(999L)).thenReturn(Optional.empty());
 
-        assertThrows(EntityNotFoundException.class,
-                () -> biometriaService.buscarPorId(1L));
+        // Act & Assert
+        assertThatThrownBy(() -> biometriaService.buscarPorId(999L))
+                .isInstanceOf(EntityNotFoundException.class)
+                .hasMessageContaining("Biometria");
     }
 
     @Test
-    @DisplayName("listarPorLote() deve retornar lista quando lote existe")
-    void listarPorLoteDeveRetornarListaQuandoLoteExiste() {
-        when(loteRepository.existsById(10L)).thenReturn(true);
-        when(biometriaRepository.findByLoteIdOrderByDataBiometriaAsc(10L))
-                .thenReturn(List.of(biometria));
+    @DisplayName("Deve listar biometrias por lote")
+    void deveListarBiometriasPorLote() {
+        // Arrange
+        List<Biometria> biometrias = Arrays.asList(biometria, biometria);
+        when(loteRepository.existsById(1L)).thenReturn(true);
+        when(biometriaRepository.findByLoteIdOrderByDataBiometriaAsc(1L))
+                .thenReturn(biometrias);
+        when(biometriaMapper.toResponse(any(Biometria.class))).thenReturn(response);
+
+        // Act
+        List<BiometriaResponse> resultado = biometriaService.listarPorLote(1L);
+
+        // Assert
+        assertThat(resultado).hasSize(2);
+        verify(loteRepository).existsById(1L);
+        verify(biometriaRepository).findByLoteIdOrderByDataBiometriaAsc(1L);
+    }
+
+    @Test
+    @DisplayName("Deve lançar exceção ao listar biometrias de lote inexistente")
+    void deveLancarExcecaoAoListarBiometriasDeloteInexistente() {
+        // Arrange
+        when(loteRepository.existsById(999L)).thenReturn(false);
+
+        // Act & Assert
+        assertThatThrownBy(() -> biometriaService.listarPorLote(999L))
+                .isInstanceOf(EntityNotFoundException.class)
+                .hasMessageContaining("Lote");
+
+        verify(biometriaRepository, never()).findByLoteIdOrderByDataBiometriaAsc(any());
+    }
+
+    @Test
+    @DisplayName("Deve buscar última biometria do lote")
+    void deveBuscarUltimaBiometriaDoLote() {
+        // Arrange
+        when(loteRepository.existsById(1L)).thenReturn(true);
+        when(biometriaRepository.findUltimaBiometriaByLoteId(1L))
+                .thenReturn(Optional.of(biometria));
         when(biometriaMapper.toResponse(biometria)).thenReturn(response);
 
-        var resultado = biometriaService.listarPorLote(10L);
+        // Act
+        BiometriaResponse resultado = biometriaService.buscarUltimaBiometriaDoLote(1L);
 
-        assertEquals(1, resultado.size());
-        assertEquals(1L, resultado.get(0).getId());
+        // Assert
+        assertThat(resultado).isNotNull();
+        assertThat(resultado.getId()).isEqualTo(1L);
+        verify(biometriaRepository).findUltimaBiometriaByLoteId(1L);
     }
 
     @Test
-    @DisplayName("listarPorLote() deve lançar EntityNotFoundException quando lote não existe")
-    void listarPorLoteDeveLancarEntityNotFoundQuandoLoteNaoExiste() {
-        when(loteRepository.existsById(10L)).thenReturn(false);
+    @DisplayName("Deve lançar exceção quando não houver biometria no lote")
+    void deveLancarExcecaoQuandoNaoHouverBiometriaNoLote() {
+        // Arrange
+        when(loteRepository.existsById(1L)).thenReturn(true);
+        when(biometriaRepository.findUltimaBiometriaByLoteId(1L))
+                .thenReturn(Optional.empty());
 
-        assertThrows(EntityNotFoundException.class,
-                () -> biometriaService.listarPorLote(10L));
+        // Act & Assert
+        assertThatThrownBy(() -> biometriaService.buscarUltimaBiometriaDoLote(1L))
+                .isInstanceOf(EntityNotFoundException.class)
+                .hasMessageContaining("Nenhuma biometria encontrada");
+    }
+
+    @Test
+    @DisplayName("Deve listar biometrias paginadas")
+    void deveListarBiometriasPaginadas() {
+        // Arrange
+        Pageable pageable = PageRequest.of(0, 10);
+        Page<Biometria> page = new PageImpl<>(Arrays.asList(biometria));
+        when(biometriaRepository.findAll(pageable)).thenReturn(page);
+        when(biometriaMapper.toResponse(any(Biometria.class))).thenReturn(response);
+
+        // Act
+        Page<BiometriaResponse> resultado = biometriaService.listarPaginado(pageable);
+
+        // Assert
+        assertThat(resultado).isNotNull();
+        assertThat(resultado.getContent()).hasSize(1);
+        verify(biometriaRepository).findAll(pageable);
+    }
+
+    // ==================== TESTES DE ATUALIZAÇÃO ====================
+
+    @Test
+    @DisplayName("Deve atualizar biometria com sucesso")
+    void deveAtualizarBiometriaComSucesso() {
+        // Arrange
+        when(biometriaRepository.findById(1L)).thenReturn(Optional.of(biometria));
+        when(loteRepository.findById(1L)).thenReturn(Optional.of(lote));
+        when(racaoRepository.calcularQuantidadeTotalRacaoByLoteId(1L))
+                .thenReturn(new BigDecimal("1500.000"));
+        when(biometriaRepository.save(any(Biometria.class))).thenReturn(biometria);
+        when(biometriaMapper.toResponse(biometria)).thenReturn(response);
+
+        // Act
+        BiometriaResponse resultado = biometriaService.atualizar(1L, request);
+
+        // Assert
+        assertThat(resultado).isNotNull();
+        verify(biometriaMapper).updateEntity(biometria, request, lote);
+        verify(biometriaRepository).save(biometria);
+    }
+
+    @Test
+    @DisplayName("Deve lançar exceção ao atualizar biometria inexistente")
+    void deveLancarExcecaoAoAtualizarBiometriaInexistente() {
+        // Arrange
+        when(biometriaRepository.findById(999L)).thenReturn(Optional.empty());
+
+        // Act & Assert
+        assertThatThrownBy(() -> biometriaService.atualizar(999L, request))
+                .isInstanceOf(EntityNotFoundException.class)
+                .hasMessageContaining("Biometria");
+
+        verify(biometriaRepository, never()).save(any(Biometria.class));
+    }
+
+    // ==================== TESTES DE DELEÇÃO ====================
+
+    @Test
+    @DisplayName("Deve deletar biometria com sucesso")
+    void deveDeletarBiometriaComSucesso() {
+        // Arrange
+        when(biometriaRepository.findById(1L)).thenReturn(Optional.of(biometria));
+
+        // Act
+        biometriaService.deletar(1L);
+
+        // Assert
+        verify(biometriaRepository).delete(biometria);
+    }
+
+    @Test
+    @DisplayName("Deve lançar exceção ao deletar biometria inexistente")
+    void deveLancarExcecaoAoDeletarBiometriaInexistente() {
+        // Arrange
+        when(biometriaRepository.findById(999L)).thenReturn(Optional.empty());
+
+        // Act & Assert
+        assertThatThrownBy(() -> biometriaService.deletar(999L))
+                .isInstanceOf(EntityNotFoundException.class)
+                .hasMessageContaining("Biometria");
+
+        verify(biometriaRepository, never()).delete(any(Biometria.class));
+    }
+
+    // ==================== TESTES DE CÁLCULOS ====================
+
+    @Test
+    @DisplayName("Deve calcular indicadores corretamente com dia cultivo zero")
+    void deveCalcularIndicadoresComDiaCultivoZero() {
+        // Arrange
+        biometria.setDiaCultivo(0);
+        when(loteRepository.findById(1L)).thenReturn(Optional.of(lote));
+        when(biometriaMapper.toEntity(request, lote)).thenReturn(biometria);
+        when(racaoRepository.calcularQuantidadeTotalRacaoByLoteId(1L))
+                .thenReturn(new BigDecimal("1500.000"));
+        when(biometriaRepository.save(any(Biometria.class))).thenReturn(biometria);
+        when(biometriaMapper.toResponse(biometria)).thenReturn(response);
+
+        // Act
+        BiometriaResponse resultado = biometriaService.criar(request);
+
+        // Assert
+        assertThat(resultado).isNotNull();
+        verify(biometriaRepository).save(any(Biometria.class));
+    }
+
+    @Test
+    @DisplayName("Deve calcular FCA quando ração total é null")
+    void deveCalcularFCAQuandoRacaoTotalEhNull() {
+        // Arrange
+        when(loteRepository.findById(1L)).thenReturn(Optional.of(lote));
+        when(biometriaMapper.toEntity(request, lote)).thenReturn(biometria);
+        when(racaoRepository.calcularQuantidadeTotalRacaoByLoteId(1L))
+                .thenReturn(null);
+        when(biometriaRepository.save(any(Biometria.class))).thenReturn(biometria);
+        when(biometriaMapper.toResponse(biometria)).thenReturn(response);
+
+        // Act
+        BiometriaResponse resultado = biometriaService.criar(request);
+
+        // Assert
+        assertThat(resultado).isNotNull();
+        verify(biometriaRepository).save(any(Biometria.class));
+    }
+
+    @Test
+    @DisplayName("Deve criar biometria sem peso total da amostra")
+    void deveCriarBiometriaSemPesoTotalDaAmostra() {
+        // Arrange
+        request.setPesoTotalAmostra(null);
+        when(loteRepository.findById(1L)).thenReturn(Optional.of(lote));
+        when(biometriaMapper.toEntity(request, lote)).thenReturn(biometria);
+        when(racaoRepository.calcularQuantidadeTotalRacaoByLoteId(1L))
+                .thenReturn(new BigDecimal("1500.000"));
+        when(biometriaRepository.save(any(Biometria.class))).thenReturn(biometria);
+        when(biometriaMapper.toResponse(biometria)).thenReturn(response);
+
+        // Act
+        BiometriaResponse resultado = biometriaService.criar(request);
+
+        // Assert
+        assertThat(resultado).isNotNull();
+        verify(biometriaRepository).save(any(Biometria.class));
     }
 }
